--- a/valuehunterweb/src/App.css
+++ b/valuehunterweb/src/App.css
@@ -17,6 +17,9 @@ body {
   h1 {
     color: #333;
     font-size: 24px;
+    display: inline-block;
+    padding: 0px;
+    margin: 0px;
   }
   
   /* Linklerin stil tanımları */
