--- a/valuehunterweb/src/components/styles/Navbar.css
+++ b/valuehunterweb/src/components/styles/Navbar.css
@@ -1,23 +1,12 @@
 .navbar {
+    top:0px;
+    left: 0px;
+    right: 0px;
+    position: fixed;
     background-color: #f2f2f2;
     overflow: hidden;
+    display: inline-block;
   }
   
-  .navbar a {
-    float: left;
-    display: block;
-    color: #333;
-    text-align: center;
-    padding: 14px 20px;
-    text-decoration: none;
-  }
-  
-  .navbar a:hover {
-    background-color: #ddd;
-  }
-  
-  .navbar a.active {
-    background-color: #666;
-    color: white;
-  }
+
   
